--- a/demo/package.json
+++ b/demo/package.json
@@ -1,10 +1,10 @@
 {
   "nativescript": {
     "id": "org.nativescript.demo",
-    "tns-ios": {
+    "tns-android": {
       "version": "2.1.1"
     },
-    "tns-android": {
+    "tns-ios": {
       "version": "2.1.1"
     }
   },
@@ -19,6 +19,7 @@
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "tns-platform-declarations": "2.0.0"
   }
 }
