--- a/demo/app/App_Resources/Android/app.gradle
+++ b/demo/app/App_Resources/Android/app.gradle
@@ -4,3 +4,20 @@
 //dependencies {
 //	compile 'com.android.support:recyclerview-v7:+'
 //}
+
+android {  
+  defaultConfig {  
+    generatedDensities = []
+    applicationId = "__PACKAGE__" 
+    
+    //override supported platforms
+    // ndk {
+    //       abiFilters.clear()
+    //   		abiFilters "armeabi-v7a"
+ 		// }
+  
+  }  
+  aaptOptions {  
+    additionalParameters "--no-version-vectors"  
+  }  
+} 
