--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -2,9 +2,25 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "experimentalDecorators": true,
+        "noImplicitAny": false,
+        "removeComments": true,
+        "preserveConstEnums": true,
+        "declaration": false,
+        "noLib": false,
+        "noEmitOnError": false,
         "noEmitHelpers": true,
-        "noEmitOnError": false
+        "experimentalDecorators": true,
+        "lib": [
+            "es6",
+            "dom"
+        ],
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "./node_modules/tns-core-modules/*",
+                "./node_modules/*"
+            ]
+        }
     },
     "exclude": [
         "node_modules",
