--- a/demo/package.json
+++ b/demo/package.json
@@ -1,25 +1,22 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-android": {
-      "version": "3.0.1"
-    },
-    "tns-ios": {
-      "version": "3.0.1"
-    }
-  },
-  "dependencies": {
-    "nativescript-checkbox": "file:..",
-    "tns-core-modules": "^3.0.0"
-  },
-  "devDependencies": {
-    "babel-traverse": "6.24.1",
-    "babel-types": "6.24.1",
-    "babylon": "6.17.2",
-    "filewalker": "0.1.3",
-    "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.4.5",
-    "typescript": "^2.2.0",
-    "tns-platform-declarations": "^3.0.0"
-  }
+	"nativescript": {
+		"id": "org.nativescript.demo",
+		"tns-android": {
+			"version": "5.0.0"
+		}
+	},
+	"dependencies": {
+		"nativescript-checkbox": "file:../src",
+		"tns-core-modules": "^5.0.2"
+	},
+	"devDependencies": {
+		"babel-traverse": "6.24.1",
+		"babel-types": "6.24.1",
+		"babylon": "6.17.2",
+		"filewalker": "0.1.3",
+		"lazy": "1.0.11",
+		"nativescript-dev-typescript": "^0.7.4",
+		"typescript": "^2.8.2",
+		"tns-platform-declarations": "^5.0.2"
+	}
 }
