--- a/demo/package.json
+++ b/demo/package.json
@@ -1,22 +1,26 @@
 {
-	"nativescript": {
-		"id": "org.nativescript.demo",
-		"tns-android": {
-			"version": "5.0.0"
-		}
-	},
-	"dependencies": {
-		"nativescript-checkbox": "file:../src",
-		"tns-core-modules": "^5.0.2"
-	},
-	"devDependencies": {
-		"babel-traverse": "6.24.1",
-		"babel-types": "6.24.1",
-		"babylon": "6.17.2",
-		"filewalker": "0.1.3",
-		"lazy": "1.0.11",
-		"nativescript-dev-typescript": "^0.7.4",
-		"typescript": "^2.8.2",
-		"tns-platform-declarations": "^5.0.2"
-	}
+  "nativescript": {
+    "id": "org.nativescript.demo",
+    "tns-android": {
+      "version": "6.0.0"
+    },
+    "tns-ios": {
+      "version": "6.0.1"
+    }
+  },
+  "dependencies": {
+    "@nstudio/nativescript-checkbox": "file:../src",
+    "tns-core-modules": "6.0.1",
+    "nativescript-theme-core": "~1.0.6"
+  },
+  "devDependencies": {
+    "babel-traverse": "6.24.1",
+    "babel-types": "6.24.1",
+    "babylon": "6.17.2",
+    "filewalker": "0.1.3",
+    "lazy": "1.0.11",
+    "typescript": "3.4.5",
+    "tns-platform-declarations": "6.0.1",
+    "nativescript-dev-webpack": "1.0.0"
+  }
 }
