--- a/demo/package.json
+++ b/demo/package.json
@@ -2,25 +2,31 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-android": {
-      "version": "6.0.0"
+      "version": "6.5.1"
     },
     "tns-ios": {
-      "version": "6.0.1"
+      "version": "6.5.1"
     }
   },
   "dependencies": {
-    "@nstudio/nativescript-checkbox": "file:../src",
-    "tns-core-modules": "6.0.1",
-    "nativescript-theme-core": "~1.0.6"
+    "nativescript-theme-core": "~1.0.4",
+    "nativescript-unit-test-runner": "0.7.0",
+    "@nativescript/core": "^6.5.8",
+    "@nstudio/nativescript-checkbox": "file:../src"
   },
   "devDependencies": {
-    "babel-traverse": "6.24.1",
-    "babel-types": "6.24.1",
-    "babylon": "6.17.2",
-    "filewalker": "0.1.3",
-    "lazy": "1.0.11",
-    "typescript": "3.4.5",
-    "tns-platform-declarations": "6.0.1",
-    "nativescript-dev-webpack": "1.0.0"
+    "jasmine-core": "^2.5.2",
+    "karma": "4.1.0",
+    "karma-jasmine": "2.0.1",
+    "karma-nativescript-launcher": "^0.4.0",
+    "nativescript-dev-webpack": "~1.5.1",
+    "tns-platform-declarations": "^6.5.1",
+    "karma-webpack": "3.0.5",
+    "tslint": "^6.0.0",
+    "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "build.plugin": "cd ../src && npm run build",
+    "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**' --exclude '**/platforms/**'"
   }
 }
