--- a/demo/package.json
+++ b/demo/package.json
@@ -1,20 +1,20 @@
 {
   "dependencies": {
-    "nativescript-theme-core": "~1.0.4",
-    "nativescript-unit-test-runner": "0.7.0",
     "@nativescript/core": "7.0.0",
+    "@nativescript/webpack": "3.0.0",
     "@nstudio/nativescript-checkbox": "file:../src",
-    "@nativescript/webpack": "3.0.0"
+    "nativescript-theme-core": "~1.0.4",
+    "nativescript-unit-test-runner": "0.7.0"
   },
   "devDependencies": {
     "@nativescript/android": "7.0.0",
     "@nativescript/ios": "7.0.0",
     "@nativescript/types": "7.0.0",
     "jasmine-core": "^2.5.2",
-    "karma": "4.1.0",
     "karma-jasmine": "2.0.1",
     "karma-nativescript-launcher": "^0.4.0",
     "karma-webpack": "3.0.5",
+    "karma": "4.1.0",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3"
   },
