project changes and formatting

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -7,23 +7,13 @@
     "skipLibCheck": true,
     "noEmitHelpers": true,
     "noEmitOnError": false,
-    "lib": [
-      "es6",
-      "dom",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2017"],
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "app/*"
-      ]
+      "~/*": ["app/*"]
     },
     "moduleResolution": "node",
     "removeComments": false
   },
-  "exclude": [
-    "node_modules",
-    "platforms",
-    "../src/node_modules"
-  ]
+  "exclude": ["node_modules", "platforms", "../src/node_modules"]
 }
